--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
+    "nodemon": "^3.1.10",
     "prisma": "^6.18.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
     "discord.js": "^14.24.0"
   }
 }
